--- a/xnvid (2)/xnvid/xvideos/app/public/css/xvideos.css
+++ b/xnvid (2)/xnvid/xvideos/app/public/css/xvideos.css
@@ -1,4 +1,4 @@
-.main-uploader,
+/* .main-uploader,
 .videoad-title.videoad-title-invideo,
 .related-content__btns,
 #video-tabs,
@@ -14,7 +14,7 @@
 .thumb-nat-ad,.simple-dropdown.search-filters,
 #header-mobile-right,#search-associates strong,#dafanliebiao,#mobile-header-links{
     display: none !important;
-}
+} */
 #head__top__container{
     width: 100%;
 }
